[QA] Automatic code analysis from Jetbrains IntelliJ-IDEA